fixed css alignment

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,9 +1,9 @@
 .home-container {
-padding: 5rem 0.5rem 4rem 0.5rem;
+padding: 5.5rem 0.5rem 5rem 0.5rem;
 }
 
 @media (min-width: 360px) {
     .home-container{
-        padding: 5rem 1.5rem 4rem 1.5rem;
+        padding: 5.5rem 1.5rem 5rem 1.5rem;
     }
   }
